[gd_scene load_steps=6 format=3 uid="uid://cp83y3odcsjrm"]

[ext_resource type="PackedScene" uid="uid://dyy6jnjoup2kd" path="res://player/player.tscn" id="1_2rxpj"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_40hyr"]
[ext_resource type="Script" path="res://RestartButton.gd" id="3_ctn4i"]

[sub_resource type="Curve2D" id="Curve2D_iuv82"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -95, -90, 0, 0, 0, 0, 2110, -123, 0, 0, 0, 0, 2083, 1185, 0, 0, 0, 0, -98, 1164, 0, 0, 0, 0, -95, -93)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_10j3x"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -725, -223, 0, 0, 0, 0, 1037, -204, 0, 0, 0, 0, 1008, 669, 0, 0, 0, 0, -720, 658, 0, 0, 0, 0, -725, -223, 0, 0, 0, 0, -733, -217)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_40hyr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1916.0
offset_bottom = 1081.0
color = Color(0.67451, 0.972549, 0.67451, 1)

[node name="Player" parent="." instance=ExtResource("1_2rxpj")]
position = Vector2(778, 258)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-767, -245)
curve = SubResource("Curve2D_iuv82")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-95, -90)
rotation = -0.0149649

[node name="PowerUpPath" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_10j3x")

[node name="PowerUpSpawn" type="PathFollow2D" parent="Player/PowerUpPath"]
unique_name_in_owner = true
position = Vector2(-725, -223)
rotation = 0.0107828

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -15.0
offset_right = 59.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 246
text = "Game Over"

[node name="RestartButton" type="Button" parent="GameOver"]
process_mode = 2
offset_left = 848.0
offset_top = 668.0
offset_right = 1206.0
offset_bottom = 813.0
theme_override_font_sizes/font_size = 100
action_mode = 0
text = "Restart?"
script = ExtResource("3_ctn4i")

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0)

[node name="ScoreLabel" type="Label" parent="UI/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 100
text = "Score: "

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/RestartButton" to="GameOver/RestartButton" method="_on_pressed"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
